reverse-proxy/chrome/endpoint.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: chrome-service
subsets:
  - addresses:
      - ip: 192.168.0.30
    ports:
      - name: https
        port: 6901
        protocol: TCP
