reverse-proxy/chrome/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chrome-service
spec:
  type: ClusterIP
  ports:
    - name: https
      port: 80
      targetPort: 6901
